app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sitharosrey-flask-test-svc
spec:
  selector:
    app: sitharosrey-flask-test
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
